--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	input{
 		float:left;
 	}
-	div{
+	#Content{
 		overflow:hidden;
 		float:left;
 		width:200px;
@@ -21,11 +21,11 @@
 	var revs = 0;
 	function revEngine(){
 		if (revs < 1){
-			$('div').prepend('<p>The engine roars to life</p>');
+			$('#Content').prepend('<p>The engine roars to life</p>');
 			$('#rev').val('Rev engine');
 		}
 		if (revs >= 1){
-			$('div').prepend('<p>The engine roars loadly</p>');
+			$('#Content').prepend('<p>The engine roars loadly</p>');
 		}
 		
 		revs = revs + 1;
@@ -37,11 +37,19 @@
 
 
 <body>
-	<div>
+	<div id="Content">
 		<p>
 			You are in a car.
 		</p>
 	</div>
-	<input id="rev" type="button" onclick="revEngine()" value="Start Engine"/>
+	<div id="Inputs">
+		<input id="rev" type="button" onclick="revEngine()" value="Start Engine"/>
+		<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears"/>
+	</div>
+	<div id="Resources">
+		<p>Revs:</p>
+		<p>Gear:</p>
+		<p>Gas:</p>
+	</div>
 </body>
 </html>
