--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 <script type="text/javascript">
 	var revs = 0;
+	function startEngine(){
+		$('#Content').prepend('<p>The engine roars to life</p>');
+		$('#startEngine').disabled(); <!--lookup actual way to disable-->
+	}
 	function revEngine(){
-		if (revs < 1){
-			$('#Content').prepend('<p>The engine roars to life</p>');
-			$('#rev').val('Rev engine');
-		}
-		if (revs >= 1){
-			$('#Content').prepend('<p>The engine roars loadly</p>');
-		}
-		
+		$('#Content').prepend('<p>The engine roars loudly</p>');
 		revs = revs + 1;
 	}
 </script>
@@ -44,7 +41,8 @@
 		</p>
 	</div>
 	<div id="Inputs">
-		<input id="rev" type="button" onclick="revEngine()" value="Start Engine"/>
+		<input id="startEngine" type="button" onclick="startEngine" value="Start Engine"/>
+		<input id="rev" type="button" onclick="revEngine()" value="Rev Engine"/>
 		<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears"/>
 	</div>
 	<div id="Resources">
