--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	var revs = 0;
 	function startEngine(){
 		$('#Content').prepend('<p>The engine roars to life</p>');
-		$('#startEngine').disabled(); <!--lookup actual way to disable-->
+		$('#startEngine').prop("disabled", true);
+		$('#rev').show();
 	}
 	function revEngine(){
 		$('#Content').prepend('<p>The engine roars loudly</p>');
@@ -41,9 +42,9 @@
 		</p>
 	</div>
 	<div id="Inputs">
-		<input id="startEngine" type="button" onclick="startEngine" value="Start Engine"/>
-		<input id="rev" type="button" onclick="revEngine()" value="Rev Engine"/>
-		<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears"/>
+		<input id="startEngine" type="button" onclick="startEngine()" value="Start Engine"/>
+		<input id="rev" type="button" onclick="revEngine()" value="Rev Engine" hidden/>
+		<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears" hidden/>
 	</div>
 	<div id="Resources">
 		<div>
