--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
 	#Inputs, #Resources{
 		float:left;
 	}
+	input{
+		width: 90px;
+	}
 	p{
 		display: inline;
 	}
+	div{
+		margin: 1%;
+	}
 	#Content{
+		border: 1px solid black;
 		overflow:hidden;
 		float:left;
 		width:200px;
@@ -42,8 +49,8 @@
 		</p>
 	</div>
 	<div id="Inputs">
-		<input id="startEngine" type="button" onclick="startEngine()" value="Start Engine"/>
-		<input id="rev" type="button" onclick="revEngine()" value="Rev Engine" hidden/>
+		<input id="startEngine" type="button" onclick="startEngine()" value="Start Engine"/><br>
+		<input id="rev" type="button" onclick="revEngine()" value="Rev Engine" hidden/><br>
 		<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears" hidden/>
 	</div>
 	<div id="Resources">
