--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <style>
 	#Inputs, #Resources{
+		position:relative;
 		float: left;
 		margin: 1%;
 	}
@@ -13,13 +14,21 @@
 	p{
 		display: inline;
 	}
-	#Content{
-		border: 1px solid black;
+	div#Content{
 		overflow: hidden;
-		float: left;
+		position:relative;
 		width: 200px;
 		height: 200px;
-		margin: 1%;
+		margin: auto;
+	}
+	div#fader{
+		height:100%;
+		width:100%;
+		position:absolute;
+		top:0px;
+		left:0px;
+		background-color:white;
+		background:linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1)100%);
 	}
 </style>
 
@@ -27,12 +36,12 @@
 <script type="text/javascript">
 	var revs = 0;
 	function startEngine(){
-		$('#Content').prepend('<p>The engine roars to life</p>');
+		$('#Content').prepend('<div>The engine roars to life</div>');
 		$('#startEngine').prop("disabled", true);
 		$('#rev').show();
 	}
 	function revEngine(){
-		$('#Content').prepend('<p>The engine roars loudly</p>');
+		$('#Content').prepend('<div>The engine roars loudly</div>');
 		revs = revs + 1;
 	}
 </script>
@@ -42,28 +51,31 @@
 
 
 <body>
-	<div id="Content">
-		<p>
-			You are in a car.
-		</p>
-	</div>
-	<div id="Inputs">
-		<input id="startEngine" type="button" onclick="startEngine()" value="Start Engine"/><br>
-		<input id="rev" type="button" onclick="revEngine()" value="Rev Engine" hidden/><br>
-		<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears" hidden/>
-	</div>
-	<div id="Resources">
-		<div>
-			<p>Revs:</p>
-			<p id="revValue">0</p>
+	<div id="wrapper">
+		<div id="Content">
+			<div>
+				You are in a car.
+			</div>
+			<div id="fader"></div>
 		</div>
-		<div>
-			<p>Gear:</p>
-			<p id="gearValue">0</p>
+		<div id="Inputs">
+			<input id="startEngine" type="button" onclick="startEngine()" value="Start Engine"/><br>
+			<input id="rev" type="button" onclick="revEngine()" value="Rev Engine" hidden/><br>
+			<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears" hidden/>
 		</div>
-		<div>
-			<p>Gas:</p>
-			<p id="gasValue">0</p>
+		<div id="Resources">
+			<div>
+				<p>Revs:</p>
+				<p id="revValue">0</p>
+			</div>
+			<div>
+				<p>Gear:</p>
+				<p id="gearValue">0</p>
+			</div>
+			<div>
+				<p>Gas:</p>
+				<p id="gasValue">0</p>
+			</div>
 		</div>
 	</div>
 </body>
