--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		overflow: hidden;
 		position:relative;
 		width: 200px;
-		height: 200px;
+		height: 500px;
 		margin: auto;
 	}
 	div#fader{
@@ -34,6 +34,9 @@
 		background-color:white;
 		background:linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1)100%);
 	}
+	.text{
+		padding-bottom: 10px;
+	}
 </style>
 
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
@@ -42,7 +45,7 @@
 	var gear = 1;
 	
 	function startEngine(){
-		$('#Content').prepend('<div>The engine roars to life</div>');
+		$('#Content').prepend('<div class="text">The engine roars to life</div>');
 		$('#startEngine').prop("disabled", true);
 		$('#rev').show();
 		revs = 1000;
@@ -50,20 +53,22 @@
 	}
 	
 	function revEngine(){
-		$('#Content').prepend('<div>The engine roars loudly</div>');
-		revs = revs + 1000;
-		$('#revValue').text(revs);
-		if (revs >= 6000){
-			$('#shiftGears').show();
-			$('#shiftGears').prop("disabled",false);
+		$('#Content').prepend('<div class="text">The engine roars loudly</div>');
+		if (revs < 7000){
+			revs = revs + 700;
+			$('#revValue').text(revs);
+			if (revs >= 5000){
+				$('#shiftGears').show();
+				$('#shiftGears').prop("disabled",false);
+			}
 		}
 	}
 	
 	function shiftGears(){
-		revs = revs - 4000;
+		revs = revs - 3000;
 		$('#revValue').text(revs);
 		gear = gear + 1;
-		$('#shiftGears').text(gear);
+		$('#gearValue').text(gear);
 		$('#shiftGears').prop("disabled", true);
 	}
 </script>
@@ -75,7 +80,7 @@
 <body>
 	<div id="wrapper">
 		<div id="Content">
-			<div>
+			<div class="text">
 				You are in a car.
 			</div>
 			<div id="fader"></div>
