--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 	.text{
 		padding-bottom: 10px;
 	}
+	#rev, #shiftGears{
+		display:none;
+	}
 </style>
 
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
@@ -47,30 +50,35 @@
 	function startEngine(){
 		$('#Content').prepend('<div class="text">The engine roars to life</div>');
 		$('#startEngine').prop("disabled", true);
-		$('#rev').show();
+		$('#rev').fadeIn();
 		revs = 1000;
 		$('#revValue').text(revs);
 	}
 	
 	function revEngine(){
-		$('#Content').prepend('<div class="text">The engine roars loudly</div>');
 		if (revs < 7000){
+			$('#Content').prepend('<div class="text">The engine roars loudly</div>');
 			revs = revs + 700;
 			$('#revValue').text(revs);
 			if (revs >= 5000){
-				$('#shiftGears').show();
-				$('#shiftGears').prop("disabled",false);
+				$('#Content').prepend('<div class="text">The engine begins to purr</div>')
+				$('#shiftGears').fadeIn().prop("disabled",false);
 			}
+		}
+		if (revs >= 7000){
+			$('#Content').prepend('<div class="text">The engine sounds like it is being pushed to the limit</div>');
 		}
 	}
 	
 	function shiftGears(){
+		$('#Content').prepend('<div class="text">The engine skips a note and then begins to build again');
 		revs = revs - 3000;
 		$('#revValue').text(revs);
 		gear = gear + 1;
 		$('#gearValue').text(gear);
 		$('#shiftGears').prop("disabled", true);
 	}
+	
 </script>
 
 </head>
@@ -81,14 +89,14 @@
 	<div id="wrapper">
 		<div id="Content">
 			<div class="text">
-				You are in a car.
+				You are in a car
 			</div>
 			<div id="fader"></div>
 		</div>
 		<div id="Inputs">
 			<input id="startEngine" type="button" onclick="startEngine()" value="Start Engine"/><br>
-			<input id="rev" type="button" onclick="revEngine()" value="Rev Engine" hidden/><br>
-			<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears" hidden/>
+			<input id="rev" type="button" onclick="revEngine()" value="Rev Engine"/><br>
+			<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears"/>
 		</div>
 		<div id="Resources">
 			<div>
@@ -97,7 +105,7 @@
 			</div>
 			<div>
 				<p>Gear:</p>
-				<p id="gearValue">1</p>
+				<p id="gearValue">Neutral</p>
 			</div>
 			<div>
 				<p>Gas:</p>
