Made some changes to make HTML valid

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
+<title>You're In A Car</title>
 <style>
 	#Inputs, #Resources{
 		position:relative;
