Added timer as resource to page, not yet implemented in the page.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 </style>
 
 <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+<script src="jquery.timer.js"></script>
 <script type="text/javascript">
 	var revs = 0;
 	var gear = 1;
