Forgot to add a sponsor which was causing text to repeat that shouldn't.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 				}
 				if (sponsors < 1 && present === true){
 					$('#Content').prepend('<div class="text">The man walks up and says he likes your style and offers to be a sponsor and pay for some of your gas</div>');
+					sponsors = sponsors + 1;
 				}
 				if (revs >= 5000){
 					$('#Content').prepend('<div class="text">The engine begins to purr</div>')
