--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	}
 	
 	function shiftGears(){
-		$('#Content').prepend('<div class="text">The engine skips a note and then begins to build again');
+		$('#Content').prepend('<div class="text">The engine skips a note and then begins to build again</div>');
 		revs = revs - 3000;
 		$('#revValue').text(revs);
 		gear = gear + 1;
@@ -110,6 +110,9 @@
 	
 	function getGas(){
 		shutdown = true;
+		$('#Content').prepend('<div class="text">You walk over to the pit and scrounge up some gas</div>');
+		gas = gas + 5;
+		$('#gasValue').text(gas);
 	}
 	
 </script>
@@ -130,6 +133,7 @@
 			<input id="startEngine" type="button" onclick="startEngine()" value="Start Engine"/><br>
 			<input id="rev" type="button" onclick="revEngine()" value="Rev Engine"/><br>
 			<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears"/>
+			<input id="gasGas" type= "button" onclick="getGas()" value="Get Gas"/>
 		</div>
 		<div id="Resources">
 			<div>
