--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	.text{
 		padding-bottom: 10px;
 	}
-	#rev, #shiftGears{
+	#rev, #shiftGears, #getGas{
 		display:none;
 	}
 </style>
@@ -49,6 +49,7 @@
 	var revs = 0;
 	var gear = 1;
 	var sponsors = 0;
+	var interested = false;
 	var present = false;
 	shutdown = true;
 	var gas = 5;
@@ -57,28 +58,25 @@
 		$('#Content').prepend('<div class="text">The engine roars to life</div>');
 		$('#startEngine').prop("disabled", true);
 		$('#rev').fadeIn();
+		$('#revResource').fadeIn();
 		revs = 1000;
 		$('#revValue').text(revs);
-		if (sponsors < 1){
-			$('#Content').prepend('<div class="text">You notice a man look over at your car</div>');
-		}
+		setInterval(function(){
+			if (revs > 0){
+				revs = revs - 1;
+				$('#revValue').text(revs);
+			}
+		},100);
 	}
 	
 	function revEngine(){
-		if (gas > 0){
+		if (checkForGas()){
 			if (revs < 7000){
 				$('#Content').prepend('<div class="text">The engine roars loudly</div>');
 				revs = revs + 700;
 				gas = gas - 1;
 				$('#revValue').text(revs);
-				if (sponsors < 1 && present === false){
-					$('#Content').prepend('<div class="text">The man looks over again and starts to walk over</div>');
-					present = true;
-				}
-				if (sponsors < 1 && present === true){
-					$('#Content').prepend('<div class="text">The man walks up and says he likes your style and offers to be a sponsor and pay for some of your gas</div>');
-					sponsors = sponsors + 1;
-				}
+				$('#gasValue').text(gas);
 				if (revs >= 5000){
 					$('#Content').prepend('<div class="text">The engine begins to purr</div>')
 					$('#shiftGears').fadeIn().prop("disabled",false);
@@ -87,10 +85,6 @@
 			if (revs >= 7000){
 				$('#Content').prepend('<div class="text">The engine sounds like it is being pushed to the limit</div>');
 			}
-			setInterval(function(){
-				revs = revs - 1;
-				$('#revValue').text(revs);
-				},100);
 		}
 		else{
 			if (shutdown){
@@ -101,6 +95,37 @@
 				$('#Content').prepend('<div class="text">You&#39;re out of gas and the car wont run</div>');
 			}
 		}
+		
+		if (sponsors < 1){
+			if (interested){
+				if (present){
+					$('#Content').prepend('<div class="text">The man walks up and says he likes your style and offers to be a sponsor and pay for some of your gas</div>');
+					sponsors = sponsors + 1;
+				}
+				else{
+					$('#Content').prepend('<div class="text">The man looks over again and starts to walk over</div>');
+					present = true;
+				}
+
+			}
+			else{
+				$('#Content').prepend('<div class="text">You notice a man look over at your car</div>');
+				interested = true;
+			}
+		}
+		
+	}
+	
+	function checkForGas(){
+		if (gas === 3 && $('#gasResource').css('display')==='none'){
+			$('#gasValue').text(gas);
+			$('#gasResource').fadeIn();
+			$('#getGas').fadeIn();
+		}
+		if (gas > 0){
+			return true;
+		}
+
 	}
 	
 	function shiftGears(){
@@ -137,18 +162,18 @@
 			<input id="startEngine" type="button" onclick="startEngine()" value="Start Engine"/><br>
 			<input id="rev" type="button" onclick="revEngine()" value="Rev Engine"/><br>
 			<input id="shiftGears" type= "button" onclick="shiftGears()" value="Shift Gears"/>
-			<input id="gasGas" type= "button" onclick="getGas()" value="Get Gas"/>
+			<input id="getGas" type= "button" onclick="getGas()" value="Get Gas"/>
 		</div>
 		<div id="Resources">
-			<div>
+			<div id="revResource"style="display:none;">
 				<p>Revs:</p>
 				<p id="revValue">0</p>
 			</div>
-			<div>
+			<div id="gearResource" style="display:none;">
 				<p>Gear:</p>
 				<p id="gearValue">Neutral</p>
 			</div>
-			<div>
+			<div id="gasResource" style="display:none;">
 				<p>Gas:</p>
 				<p id="gasValue">0</p>
 			</div>
