Refactored the messages to have the jquery functionality extracted into a function.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	var gas = 5;
 	
 	function startEngine(){
-		$('<div class="text">The engine roars to life</div>').hide().prependTo('#Content').fadeIn('slow');
+		printText('<div class="text">The engine roars to life</div>');
 		$('#startEngine').prop("disabled", true);
 		$('#rev').fadeIn();
 		$('#revResource').fadeIn();
@@ -71,44 +71,44 @@
 	function revEngine(){
 		if (checkForGas()){
 			if (revs < 7000){
-				$('<div class="text">The engine roars loudly</div>').hide().prependTo('#Content').fadeIn('slow');
+				printText('<div class="text">The engine roars loudly</div>');
 				revs = revs + 700;
 				gas = gas - 1;
 				$('#revValue').text(revs);
 				$('#gasValue').text(gas);
 				if (revs >= 5000){
-					$('<div class="text">The engine begins to purr</div>').hide().prependTo('#Content').fadeIn('slow');
+					printText('<div class="text">The engine begins to purr</div>');
 					$('#shiftGears').fadeIn().prop("disabled",false);
 				}
 			}
 			if (revs >= 7000){
-				$('<div class="text">The engine sounds like it is being pushed to the limit</div>').hide().prependTo('#Content').fadeIn('slow');
+				printText('<div class="text">The engine sounds like it is being pushed to the limit</div>');
 			}
 		}
 		else{
 			if (shutdown){
-				$('<div class="text">The car sputters and the engine cuts out</div>').hide().prependTo('#Content').fadeIn('slow');
+				printText('<div class="text">The car sputters and the engine cuts out</div>');
 				shutdown = false;
 			}
 			else{
-				$('<div class="text">You&#39;re out of gas and the car wont run</div>').hide().prependTo('#Content').fadeIn('slow');
+				printText('<div class="text">You&#39;re out of gas and the car wont run</div>');
 			}
 		}
 		
 		if (sponsors < 1){
 			if (interested){
 				if (present){
-					$('<div class="text">The man walks up and says he likes your style and offers to be a sponsor and pay for some of your gas</div>').hide().prependTo('#Content').fadeIn('slow');
+					printText('<div class="text">The man walks up and says he likes your style and offers to be a sponsor and pay for some of your gas</div>');
 					sponsors = sponsors + 1;
 				}
 				else{
-					$('<div class="text">The man looks over again and starts to walk over</div>').hide().prependTo('#Content').fadeIn('slow');
+					printText('<div class="text">The man looks over again and starts to walk over</div>');
 					present = true;
 				}
 
 			}
 			else{
-				$('<div class="text">You notice a man look over at your car</div>').hide().prependTo('#Content').fadeIn('slow');
+				printText('<div class="text">You notice a man look over at your car</div>');
 				interested = true;
 			}
 		}
@@ -118,7 +118,7 @@
 	function checkForGas(){
 		if (gas === 3 && $('#gasResource').css('display')==='none'){
 			$('#gasValue').text(gas);
-			$('<div class="text">You realize you are running a little low on gas</div>').hide().prependTo('#Content').fadeIn('slow');
+			printText('<div class="text">You realize you are running a little low on gas</div>');
 			$('#gasResource').fadeIn();
 			$('#getGas').fadeIn();
 		}
@@ -129,7 +129,7 @@
 	}
 	
 	function shiftGears(){
-		$('<div class="text">The engine skips a note and then begins to build again</div>').hide().prependTo('#Content').fadeIn('slow');
+		printText('<div class="text">The engine skips a note and then begins to build again</div>');
 		revs = revs - 3000;
 		$('#revValue').text(revs);
 		gear = gear + 1;
@@ -139,11 +139,14 @@
 	
 	function getGas(){
 		shutdown = true;
-		$('<div class="text">You walk over to the pit and scrounge up some gas</div>').hide().prependTo('#Content').fadeIn('slow');
+		printText('<div class="text">You walk over to the pit and scrounge up some gas</div>');
 		gas = gas + 5;
 		$('#gasValue').text(gas);
 	}
 	
+	function printText(message){
+		$(message).hide().prependTo('#Content').fadeIn('slow');
+	}
 </script>
 
 </head>
