--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	}
 	
 	function printText(message){
-		$('<div class="text">'+message+'/<div>').hide().prependTo('#Content').fadeIn('slow');
+		$('<div class="text">'+message+'</div>').hide().prependTo('#Content').fadeIn('slow');
 	}
 </script>
 
