Forgot to add var to a variable.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	var sponsors = 0;
 	var interested = false;
 	var present = false;
-	shutdown = true;
+	var shutdown = true;
 	var gas = 5;
 	
 	function startEngine(){
